copied JavaScript files to a new ts folder to convert them

--- a/src/todoList-ts/todoListController.html
+++ b/src/todoList-ts/todoListController.html
@@ -1,5 +1,5 @@
-<div ng-controller="TodoListJsController as vm">
-	<h1>JavaScript Todo List: binding to Controller</h1>
+<div ng-controller="TodoListController as vm">
+	<h1>TypeScript Todo List: binding to Controller</h1>
 
 	<form class="form-inline">
 		<div class="form-group">
