--- a/src/todoList-ts/todoListDirectiveTemplate.html
+++ b/src/todoList-ts/todoListDirectiveTemplate.html
@@ -1,6 +1,4 @@
-<div ng-controller="TodoListJsController as vm">
-	<h1>JavaScript Todo List: binding to Controller</h1>
-
+<div>
 	<form class="form-inline">
 		<div class="form-group">
 			<label>Task: </label>
@@ -38,5 +36,4 @@
 		</table>
 	</div>
 	<pre>{{vm | json}}</pre>
-
 </div>
